Fixed an issue with the overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -150,7 +150,8 @@ ul {
 }
 
 @media screen and (max-width: 768px) {
-    body {
+    main {
+        position: relative;
         overflow-x: hidden;
     }
 
